iot-registry-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry-svc
spec:
  type: ClusterIP
  selector:
    app: registry-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
